some changes in coupon

--- a/views/users/cartkkk.hbs
+++ b/views/users/cartkkk.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+{{!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 <!-- font awesome style -->
 <link href="css/font-awesome.min.css" rel="stylesheet" />
 <!-- Custom styles for this template -->
@@ -180,4 +180,4 @@
             });
         });
     });
-</script>
+</script> --}}
